@@ -392,235 +392,236 @@ SPI NOR Flash Support List:
 040. GD25Q64CSIG
 041. GD25Q128CSIG
 042. GD25Q256CSIG
-043. MX25L8005M
-044. MX25L1605D
-045. MX25L3205D
-046. MX25L6405D
-047. MX25L12805D
-048. MX25L25635E
-049. MX25L51245G
-050. YC25Q128
-051. FL016AIF
-052. FL064AIF
-053. S25FL016P
-054. S25FL032P
-055. S25FL064P
-056. S25FL128P
-057. S25FL129P
-058. S25FL256S
-059. S25FL512S
-060. S25FL116K
-061. S25FL132K
-062. S25FL164K
-063. EN25F16
-064. EN25Q16
-065. EN25QH16
-066. EN25Q32B
-067. EN25F32
-068. EN25F64
-069. EN25Q64
-070. EN25QA64A
-071. EN25QH64A
-072. EN25Q128
-073. EN25Q256
-074. EN25QA128A
-075. EN25QH128A
-076. GM25Q128A
-077. W25X05
-078. W25X10
-079. W25X20
-080. W25X40
-081. W25X80
-082. W25X16
-083. W25X32VS
-084. W25X64
-085. W25Q20CL
-086. W25Q20BW
-087. W25Q20EW
-088. W25Q80
-089. W25Q80BL
-090. W25Q16JQ
-091. W25Q16JM
-092. W25Q32BV
-093. W25Q32DW
-094. W25Q32JWIM
-095. W25Q64BV
-096. W25Q64DW
-097. W25Q64JVIM
-098. W25Q128BV
-099. W25Q128FW
-100. W25Q256FV
-101. W25Q256JW
-102. W25Q256JWIM
-103. W25Q512JV
-104. W25Q512JVIM
-105. W25Q512NW
-106. W25Q512NWIM
-107. M25P05
-108. M25P10
-109. M25P20
-110. M25P40
-111. M25P80
-112. M25P16
-113. M25P32
-114. M25P64
-115. M25P128
-116. N25Q016A
-117. N25Q032A
+043. MX25L4005A
+044. MX25L8005M
+045. MX25L1605D
+046. MX25L3205D
+047. MX25L6405D
+048. MX25L12805D
+049. MX25L25635E
+050. MX25L51245G
+051. YC25Q128
+052. FL016AIF
+053. FL064AIF
+054. S25FL016P
+055. S25FL032P
+056. S25FL064P
+057. S25FL128P
+058. S25FL129P
+059. S25FL256S
+060. S25FL512S
+061. S25FL116K
+062. S25FL132K
+063. S25FL164K
+064. EN25F16
+065. EN25Q16
+066. EN25QH16
+067. EN25Q32B
+068. EN25F32
+069. EN25F64
+070. EN25Q64
+071. EN25QA64A
+072. EN25QH64A
+073. EN25Q128
+074. EN25Q256
+075. EN25QA128A
+076. EN25QH128A
+077. GM25Q128A
+078. W25X05
+079. W25X10
+080. W25X20
+081. W25X40
+082. W25X80
+083. W25X16
+084. W25X32VS
+085. W25X64
+086. W25Q20CL
+087. W25Q20BW
+088. W25Q20EW
+089. W25Q80
+090. W25Q80BL
+091. W25Q16JQ
+092. W25Q16JM
+093. W25Q32BV
+094. W25Q32DW
+095. W25Q32JWIM
+096. W25Q64BV
+097. W25Q64DW
+098. W25Q64JVIM
+099. W25Q128BV
+100. W25Q128FW
+101. W25Q256FV
+102. W25Q256JW
+103. W25Q256JWIM
+104. W25Q512JV
+105. W25Q512JVIM
+106. W25Q512NW
+107. W25Q512NWIM
+108. M25P05
+109. M25P10
+110. M25P20
+111. M25P40
+112. M25P80
+113. M25P16
+114. M25P32
+115. M25P64
+116. M25P128
+117. N25Q016A
 118. N25Q032A
-119. N25Q064A
+119. N25Q032A
 120. N25Q064A
-121. N25Q128A
+121. N25Q064A
 122. N25Q128A
-123. N25Q256A
-124. N25Q512A
-125. MT25QL64AB
-126. MT25QU64AB
-127. MT25QL128AB
-128. MT25QU128AB
-129. MT25QL256AB
-130. MT25QU256AB
-131. MT25QL512AB
-132. MT25QU512AB
-133. XM25QH10B
-134. XM25QH20B
-135. XM25QU41B
-136. XM25QH40B
-137. XM25QU80B
-138. XM25QH80B
-139. XM25QU16B
-140. XM25QH16C
-141. XM25QW16C
-142. XM25QH32B
-143. XM25QW32C
-144. XM25LU32C
-145. XM25QH32A
-146. XM25QH64C
-147. XM25LU64C
-148. XM25QW64C
-149. XM25QH64A
-150. XM25QH128A
-151. XM25QH128C
-152. XM25LU128C
-153. XM25QW128C
-154. XM25QH256C
-155. XM25QU256C
-156. XM25QW256C
-157. XM25QH512C
-158. XM25QU512C
-159. XM25QW512C
-160. MD25D20
-161. MD25D40
-162. ZB25VQ16
-163. ZB25LQ16
-164. ZB25VQ32
-165. ZB25LQ32
-166. ZB25VQ64
-167. ZB25LQ64
-168. ZB25VQ128
-169. ZB25LQ128
-170. LE25U20AMB
-171. LE25U40CMC
-172. BY25D05AS
-173. BY25D10AS
-174. BY25D20AS
-175. BY25D40AS
-176. BY25Q40BL
+123. N25Q128A
+124. N25Q256A
+125. N25Q512A
+126. MT25QL64AB
+127. MT25QU64AB
+128. MT25QL128AB
+129. MT25QU128AB
+130. MT25QL256AB
+131. MT25QU256AB
+132. MT25QL512AB
+133. MT25QU512AB
+134. XM25QH10B
+135. XM25QH20B
+136. XM25QU41B
+137. XM25QH40B
+138. XM25QU80B
+139. XM25QH80B
+140. XM25QU16B
+141. XM25QH16C
+142. XM25QW16C
+143. XM25QH32B
+144. XM25QW32C
+145. XM25LU32C
+146. XM25QH32A
+147. XM25QH64C
+148. XM25LU64C
+149. XM25QW64C
+150. XM25QH64A
+151. XM25QH128A
+152. XM25QH128C
+153. XM25LU128C
+154. XM25QW128C
+155. XM25QH256C
+156. XM25QU256C
+157. XM25QW256C
+158. XM25QH512C
+159. XM25QU512C
+160. XM25QW512C
+161. MD25D20
+162. MD25D40
+163. ZB25VQ16
+164. ZB25LQ16
+165. ZB25VQ32
+166. ZB25LQ32
+167. ZB25VQ64
+168. ZB25LQ64
+169. ZB25VQ128
+170. ZB25LQ128
+171. LE25U20AMB
+172. LE25U40CMC
+173. BY25D05AS
+174. BY25D10AS
+175. BY25D20AS
+176. BY25D40AS
 177. BY25Q40BL
-178. BY25Q80BS
-179. BY25Q16BS
-180. BY25Q16BL
-181. BY25Q32BS
-182. BY25Q32AL
-183. BY25Q64AS
-184. BY25Q64AL
-185. BY25Q128AS
-186. BY25Q128EL
-187. BY25Q256ES
-188. XT25F04D
-189. XT25F08B
-190. XT25F08D
-191. XT25F16B
-192. XT25Q16D
-193. XT25F32B
-194. XT25F64B
-195. XT25Q64D
-196. XT25F128B
-197. XT25F128D
-198. PM25LQ016
-199. PM25LQ032
-200. PM25LQ064
-201. PM25LQ128
-202. IS25LQ010
-203. IS25LQ020
-204. IS25WP040D
-205. IS25LP080D
-206. IS25WP080D
-207. IS25LP016D
-208. IS25WP016D
-209. IS25LP032D
-210. IS25WP032D
-211. IS25LP064D
-212. IS25WP064D
-213. IS25LP128F
-214. IS25WP128F
-215. IS25LP256D
-216. IS25WP256D
-217. IS25LP256D
-218. IS25WP256D
-219. FM25W04
-220. FM25Q04
-221. FM25Q08
-222. FM25W16
-223. FM25Q16
-224. FM25W32
-225. FS25Q32
-226. FM25W64
-227. FS25Q64
-228. FM25W128
-229. FS25Q128
-230. FM25Q04A
-231. FM25M04A
-232. FM25Q08A
-233. FM25M08A
-234. FM25Q16A
-235. FM25M16A
-236. FM25Q32A
-237. FM25M32B
-238. FM25Q64A
-239. FM25M64A
-240. FM25Q128A
-241. PN25F16
-242. PN25F32
-243. PN25F64
-244. PN25F128
-245. P25D05H
-246. P25D10H
-247. P25D20H
-248. P25D40H
-249. P25D80H
-250. P25Q16H
-251. P25Q32H
-252. P25Q64H
-253. P25Q128H
-254. PY25Q128HA
-255. SK25P32
-256. SK25P64
-257. SK25P128
-258. ZD25Q16B
-259. ZD25Q32C
-260. ZD25LQ64
-261. ZD25Q64B
-262. ZD25LQ128
-263. PCT25VF010A
-264. PCT25VF020B
-265. PCT25VF040B
-266. PCT25VF080B
-267. PCT25VF016B
-268. PCT25VF032B
-269. PCT25VF064C
-270. PCT26VF016
-271. PCT26VF032
+178. BY25Q40BL
+179. BY25Q80BS
+180. BY25Q16BS
+181. BY25Q16BL
+182. BY25Q32BS
+183. BY25Q32AL
+184. BY25Q64AS
+185. BY25Q64AL
+186. BY25Q128AS
+187. BY25Q128EL
+188. BY25Q256ES
+189. XT25F04D
+190. XT25F08B
+191. XT25F08D
+192. XT25F16B
+193. XT25Q16D
+194. XT25F32B
+195. XT25F64B
+196. XT25Q64D
+197. XT25F128B
+198. XT25F128D
+199. PM25LQ016
+200. PM25LQ032
+201. PM25LQ064
+202. PM25LQ128
+203. IS25LQ010
+204. IS25LQ020
+205. IS25WP040D
+206. IS25LP080D
+207. IS25WP080D
+208. IS25LP016D
+209. IS25WP016D
+210. IS25LP032D
+211. IS25WP032D
+212. IS25LP064D
+213. IS25WP064D
+214. IS25LP128F
+215. IS25WP128F
+216. IS25LP256D
+217. IS25WP256D
+218. IS25LP256D
+219. IS25WP256D
+220. FM25W04
+221. FM25Q04
+222. FM25Q08
+223. FM25W16
+224. FM25Q16
+225. FM25W32
+226. FS25Q32
+227. FM25W64
+228. FS25Q64
+229. FM25W128
+230. FS25Q128
+231. FM25Q04A
+232. FM25M04A
+233. FM25Q08A
+234. FM25M08A
+235. FM25Q16A
+236. FM25M16A
+237. FM25Q32A
+238. FM25M32B
+239. FM25Q64A
+240. FM25M64A
+241. FM25Q128A
+242. PN25F16
+243. PN25F32
+244. PN25F64
+245. PN25F128
+246. P25D05H
+247. P25D10H
+248. P25D20H
+249. P25D40H
+250. P25D80H
+251. P25Q16H
+252. P25Q32H
+253. P25Q64H
+254. P25Q128H
+255. PY25Q128HA
+256. SK25P32
+257. SK25P64
+258. SK25P128
+259. ZD25Q16B
+260. ZD25Q32C
+261. ZD25LQ64
+262. ZD25Q64B
+263. ZD25LQ128
+264. PCT25VF010A
+265. PCT25VF020B
+266. PCT25VF040B
+267. PCT25VF080B
+268. PCT25VF016B
+269. PCT25VF032B
+270. PCT25VF064C
+271. PCT26VF016
+272. PCT26VF032
 
 I2C EEPROM Support List:
 001. 24c01
